--- a/src/App.css
+++ b/src/App.css
@@ -1,47 +1,42 @@
-/* Centering the calculator */
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh; /* Full screen height */
-  background-color: #f0f0f0;
-}
-
-/* Styling the calculator */
-.calculator {
-  width: 250px;
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
   text-align: center;
-  padding: 15px;
-  border: 5px solid #4CAF50;
-  border-radius: 10px;
-  background-color: #ffffff;
 }
 
-/* Styling the display */
-.display {
-  margin-bottom: 5px;
-  padding: 10px;
-  border: 5px solid #4CAF50;
-  min-height: 40px;
-  background-color: #000000;
-  color: white;
-  font-size: 18px;
-  font-weight: bold;
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-/* Styling the buttons */
-.buttons button {
-  margin: 2px;
-  padding: 10px;
-  width: 50px;
-  font-size: 16px;
-  cursor: pointer;
-  border: none;
-  background-color: #ddd;
-  border-radius: 5px;
-  transition: background 0.3s;
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
-.buttons button:hover {
-  background-color: #bbb;
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+
+.card {
+  padding: 2em;
+}
+
+.read-the-docs {
+  color: #888;
 }
