--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,51 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  background-color: #090909;
+}
+
+.calculator {
+  width: 280px;
+  padding: 15px;
+  border: 5px solid #4CAF50;
+  border-radius: 10px;
+  background-color: #ffffff;
   text-align: center;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.display {
+  margin-bottom: 10px;
+  padding: 15px;
+  border: 5px solid #4CAF50;
+  min-height: 50px;
+  background-color: #000000;
+  color: white;
+  font-size: 22px;
+  font-weight: bold;
+  text-align: right;
+  border-radius: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.buttons {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 5px;
 }
 
-.card {
-  padding: 2em;
+.buttons button {
+  padding: 15px;
+  font-size: 18px;
+  cursor: pointer;
+  border: none;
+  background-color: #b6dda0;
+  border-radius: 5px;
+  transition: background 0.3s;
 }
 
-.read-the-docs {
-  color: #888;
+.buttons button:hover {
+  background-color: #2a2727;
 }
