--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex;
   height: 100vh;
   width: 100vw;
   background-color: #090909;
