--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .container {
   display: flex;
   justify-content: center;
-  align-items: right;
-  height: 100vh;
+  align-items: center;
+  height: 50vh;
   width: 100vw;
   background-color: #090909;
 }
